# primeknots

./: .gitattributes  .gitignore  ARCHITECTURE.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  RESEARCH.md  index.html
.claude/: settings.json
.github/workflows/: ci.yml
app/: CMakeLists.txt  at.cpp
data/: README.md
data/belabas/: cubic_s3.txt
data/cremona/: MANIFEST.json  README.md  m1_extract.txt
data/cubic/: s3_counts.txt
data/m4/: ne_cache.txt  ss_empirical.txt
data/m5/: ne_cache_x131072.txt  ne_cache_x262144.txt  ne_cache_x65536.txt  rank_cache_x65536.txt  ss_x131072.txt  ss_x262144.txt  ss_x65536.txt
data/odlyzko/: MANIFEST.json
docs/: ARCHITECTURE-M.md  ARCHITECTURE.md  ERRATA.md  RESEARCH-M.md
docs/deck/: CLAIMS.md  OUTLINE.md  index.html
docs/explainers/: CLAIMS-E.md  E1-murmurations.md  E2-primeknots.md  E3-method.md
docs/notes/: apc1_parse.py  clean-release-sweep.md  cold-retro-v1.0.0.md  eq1-interval.md  extended-run-2026-07-08.md  freshness-guard.md  layer1-qa-sweep.md  libm-partial-diff-spec.md  libm_float_diff.py  m0-pinning.md  m0b-pinning.md  m1-pinning.md  m2-pinning.md  m3-pinning.md  m4-pinning.md  methods-dossier-costs.md  methods-dossier-mechanisms.md  methods-dossier-usage.md  open-questions.md  publication-audit.md  referee-round-2026-07.md  referee_b2b3.py  referee_digitize.py  reframe-registry.md  stage1-sampling-policy.md  stage2-pinning.md  stage3-pinning.md  stage4-pinning.md  stage5-pinning.md  stage6-pinning.md  twin-independence.md
docs/notes/data-note/: CLAIMS-N.md  README.md  data-note.html  (+3 more)
docs/papers/: MANIFEST-M.json  README.md
docs/preregistered/: LOOKS.md  PR-1.md  PR-2.md  PR-3.md
docs/schemas/: README.md  borromean.schema.json  classgroups.schema.json  cs_partition.schema.json  dirichlet_murmuration.schema.json  dw_s3.schema.json  dyn_zeta.schema.json  linking_graph.schema.json  linking_matrix.schema.json  murmuration_curve.schema.json  psi_reconstruction.schema.json  sawin_sutherland_murmuration.schema.json  ss_rank_split_murmuration.schema.json  ss_x_extension_murmuration.schema.json  zeros.schema.json  zubrilina_murmuration.schema.json
oracle/: CMakeLists.txt  belabas_cubic.py  build_belabas.sh  compute_cubic_counts.py  fetch_ecdata.py  fetch_lmfdb.py  fetch_odlyzko.py  fetch_papers_m.py  gen_constants.py  pari.cpp  pari.h  ss_density_oracle.gp
oracle/gp/: cubic_count.gp  kronecker.gp
scripts/: ss_progress.py
src/: CMakeLists.txt
src/classgroup/: class_group.cpp  class_group.h  qform.cpp  qform.h  redei_matrix.cpp  redei_matrix.h
src/core/: bessel.cpp  bessel.h  bigint.h  constants.h  int_types.h  modpow.cpp  modpow.h  primes.cpp  primes.h
src/cs/: lhs.cpp  lhs.h  rhs.cpp  rhs.h
src/dw/: s3_count.cpp  s3_count.h
src/ell/: ap.cpp  ap.h  ap_cache.cpp  ap_cache.h  ap_fast.cpp  ap_fast.h  ap_shanks_mestre.cpp  ap_shanks_mestre.h  curve.cpp  curve.h  ecdata.cpp  ecdata.h
src/emit/: emit_borromean.cpp  emit_borromean.h  emit_classgroups.cpp  emit_classgroups.h  emit_cs.cpp  emit_cs.h  emit_dirichlet.cpp  emit_dirichlet.h  emit_dw.cpp  emit_dw.h  emit_linking.cpp  emit_linking.h  emit_murmuration.cpp  emit_murmuration.h  emit_sawin_sutherland.cpp  emit_sawin_sutherland.h  emit_zeta.cpp  emit_zeta.h  emit_zubrilina.cpp  emit_zubrilina.h  json.h
src/linking/: f2matrix.cpp  f2matrix.h  linking_matrix.cpp  linking_matrix.h
src/mform/: dimension.cpp  dimension.h  hurwitz.cpp  hurwitz.h  trace.cpp  trace.h
src/murm/: dirichlet_murmuration.cpp  dirichlet_murmuration.h  height_family.cpp  height_family.h  murmuration.cpp  murmuration.h  ne_cache.cpp  ne_cache.h  rank_cache.cpp  rank_cache.h  rank_split.cpp  rank_split.h  ss_density.cpp  ss_density.h  ss_empirical.cpp  ss_empirical.h  ss_empirical_m0b.cpp  ss_run_io.cpp  zub_density.cpp  zub_density.h  zub_empirical.cpp  zub_empirical.h
src/redei/: conic.cpp  conic.h  omega_mod4.cpp  omega_mod4.h  redei_symbol.cpp  redei_symbol.h
src/symbols/: dirichlet.cpp  dirichlet.h  jacobi.cpp  jacobi.h  legendre.cpp  legendre.h  tonelli_shanks.cpp  tonelli_shanks.h
src/zeta/: explicit_formula.cpp  explicit_formula.h  riemann_siegel.cpp  riemann_siegel.h  ruelle.cpp  ruelle.h  zero_finder.cpp  zero_finder.h
verify/: CMakeLists.txt  deck_check.py  explainers_check.py  freshness_check.py  harness.h  oracle_skip_check.cmake  progress.h  validate_json.py  verify_main.cpp
verify/m0/: ap_tests.cpp  cache_tests.cpp  fast_tests.cpp  fixture.h  oracle_tests.cpp
verify/m1/: murmuration_tests.cpp
verify/m2/: dirichlet_tests.cpp
verify/m3/: convergence_tests.cpp  density_tests.cpp  dimension_tests.cpp  fast_tests.cpp  hurwitz_tests.cpp  trace_tests.cpp
verify/m4/: bessel_tests.cpp  height_tests.cpp  ne_cache_tests.cpp  overlap_tests.cpp  ss_density_tests.cpp  ss_empirical_tests.cpp
verify/m5/: ap_cache_tests.cpp  ap_shanks_mestre_tests.cpp  rank_split_tests.cpp  ss_extension_tests.cpp  ss_provider_tests.cpp  ss_x18_gate_tests.cpp
verify/stage0/: core_tests.cpp  oracle_tests.cpp  symbols_tests.cpp  util.h
verify/stage1/: f2matrix_tests.cpp  fixture.h  linking_tests.cpp  oracle_tests.cpp
verify/stage2/: conic_tests.cpp  fixture.h  omega_tests.cpp  oracle_tests.cpp  redei_tests.cpp
verify/stage3/: fixture.h  oracle_tests.cpp  qform_tests.cpp  redei_reichardt_tests.cpp
verify/stage4/: comparison_tests.cpp  fixture.h  invariance_tests.cpp
verify/stage5/: explicit_formula_tests.cpp  rs_zero_tests.cpp  ruelle_tests.cpp
verify/stage6/: dw_tests.cpp  fixture.h  oracle_tests.cpp
viz/: README.md  borromean.html  classgroups.html  common.css  cs.html  dirichlet.html  dw.html  explicit_formula.html  linking.html  murmurations.html  sawin_sutherland.html  ss_rank_split.html  zubrilina.html
viz/data/: borromean.json  classgroups.json  cs_partition.json  dirichlet_murmuration.json  dw_s3.json  dyn_zeta.json  linking_graph.json  linking_matrix.json  murmuration_curve.json  psi_reconstruction.json  sawin_sutherland_murmuration.json  ss_rank_split_murmuration.json  ss_x_extension_murmuration.json  zeros.json  zubrilina_murmuration.json
(+5 files in other folders)
